--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Retrofit"></activity>
+        <activity android:name=".Okhttp_Test"></activity>
+        <activity android:name=".Retrofit" />
         <activity android:name=".Inform" />
         <activity android:name=".MyMap" />
         <activity android:name=".Splashscreen">
